--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -82,7 +82,7 @@ copyright_notice = "Copyright 2020 [Data Analytics Colloquium](https://www.datac
 # pocketcasts_subscribe = "http://pcasts.in/feed/feeds.soundcloud.com/users/soundcloud:users:203144248/sounds.rss"
 # mailchimp_subscribe = "//arresteddevops.us3.list-manage.com/subscribe/post?u=5e4cbcac996bb9df25f970a89&amp;id=154fa76bcc"
 # rss_subscribe = "http://feed.com/myfeed" #only set this if you don't want to use the built-in feed
-description = "Data Analytics Colloquium convenes international scholars and data scientists in online seminars and workshops. Members of the colloquium will engage in conversation with speakers and replication of data methods and big data models. The colloquium will be delivered using online learning platform and codes and data will be open for access in [GitHub](https://github.com/dacolloquium). The weekly webinars will be co-hosted by the National Chung Hsing University and the University of Texas at Dallas. We invite participation from students and scholars in Taiwan and the United States. Real time events will open for registration and recorded videos will be archived and made available for public access."
+# description = "Data Analytics Colloquium convenes international scholars and data scientists in online seminars and workshops. Members of the colloquium will engage in conversation with speakers and replication of data methods and big data models. The colloquium will be delivered using online learning platform and codes and data will be open for access in [GitHub](https://github.com/dacolloquium). The weekly webinars will be co-hosted by the National Chung Hsing University and the University of Texas at Dallas. We invite participation from students and scholars in Taiwan and the United States. Real time events will open for registration and recorded videos will be archived and made available for public access."
 # media_prefix = ""
 # disqusShortname = ""
 #  [params.feed]
@@ -129,27 +129,27 @@ description = "Data Analytics Colloquium convenes international scholars and dat
     youtube = "dacolloquium"
     linkedin = "dacolloquium"
 #    twitch = ""
-  [params.authors]
-  [params.authors.1Peter]
-			name = " Peter Ching-Heng Pan"
-			thumbnail = "img/host/chpan.jpg"
-			bio = "Dr. Ching-Heng Pan is Associate Professor and the Director of the Graduate Institute of National Policy and Public Affairs at National Chung Hsing University in Taiwan.  Professor Pan studies public administration, with a primary interest in the relationship between information technology and public governance, which includes such topics as social media and government, smart governance, information technology and public organizations. His recent research projects center around the influence of web applications on the networking between/within the nonprofit and government sectors. His teaching courses include Organizational Behaviors and Theories, Public Economics, e-Governance, and Research Methods in Social Sciences. He is a graduate of Columbia University and the University of Southern California, where he received his Ph.D. He was a research fellow of Taiwan e-Governance Center, where he involved several research projects as PI or co-PI between 2007 and 2013."
-  [params.authors.1Peter.social]
-					twitter = "chpan2012"
-  [params.authors.2Karl]
-      name	= "Karl Ho"
-      thumbnail = "img/host/KarlHo.jpg"
-      bio = "Karl Ho is Associate Professor of Instruction at the University of Texas at Dallas School of Economic, Political and Policy Sciences. He is the co-founder of the EPPS Social Data Analytics and Research (SDAR) master program.  He is co-investigator of the Hong Kong Election Study (HKES) project, studying electoral developments in Hong Kong since 2015. Currently he serves in the advisors group at the UTD [COMETrends](https://cometrends.utdallas.edu) project."
-  [params.authors.2Karl.social]
-        github = "karlho"
-        facebook = "karlho"
-        twitter = "karlho"
-        linkedin = "karlho"
-        homepage = "https://karlho.com"
-        pinterest = ""
-        instagram = ""
-        youtube = ""
-        twitch = ""
+#  [params.authors]
+#  [params.authors.1Peter]
+#			name = " Peter Ching-Heng Pan"
+#			thumbnail = "img/host/chpan.jpg"
+#			bio = "Dr. Ching-Heng Pan is Associate Professor and the Director of the Graduate Institute of National Policy and Public Affairs at National Chung Hsing University in Taiwan.  Professor Pan studies public administration, with a primary interest in the relationship between information technology and public governance, which includes such topics as social media and government, smart governance, information technology and public organizations. His recent research projects center around the influence of web applications on the networking between/within the nonprofit and government sectors. His teaching courses include Organizational Behaviors and Theories, Public Economics, e-Governance, and Research Methods in Social Sciences. He is a graduate of Columbia University and the University of Southern California, where he received his Ph.D. He was a research fellow of Taiwan e-Governance Center, where he involved several research projects as PI or co-PI between 2007 and 2013."
+#  [params.authors.1Peter.social]
+#					twitter = "chpan2012"
+#  [params.authors.2Karl]
+#      name	= "Karl Ho"
+#      thumbnail = "img/host/KarlHo.jpg"
+#      bio = "Karl Ho is Associate Professor of Instruction at the University of Texas at Dallas School of Economic, Political and Policy Sciences. He is the co-founder of the EPPS Social Data Analytics and Research (SDAR) master program.  He is co-investigator of the Hong Kong Election Study (HKES) project, studying electoral developments in Hong Kong since 2015. Currently he serves in the advisors group at the UTD [COMETrends](https://cometrends.utdallas.edu) project."
+#  [params.authors.2Karl.social]
+#        github = "karlho"
+#        facebook = "karlho"
+#        twitter = "karlho"
+#        linkedin = "karlho"
+#        homepage = "https://karlho.com"
+#        pinterest = ""
+#        instagram = ""
+#        youtube = ""
+#        twitch = ""
  
    # [params.links]
    #   [params.links.ado]
