--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -68,7 +68,7 @@ mainSections = ["episode"]
 site_theme = "blue"
 # site_layout = "grid"
 site_layout = "row"
-enable_jumbo = "true"
+# enable_jumbo = "true"
 # enable_jumbo = "false"
 # truncate = "100"
 about_logo = "/img/DAC_logo.svg"
