--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -69,7 +69,7 @@ site_theme = "blue"
 # site_layout = "grid"
 site_layout = "row"
 # enable_jumbo = "true"
-# enable_jumbo = "false"
+enable_jumbo = "false"
 # truncate = "100"
 about_logo = "/img/DAC_logo.svg"
 copyright_notice = "Copyright 2020 [Data Analytics Colloquium](https://www.datacolloquium.com)"
