--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -72,7 +72,7 @@ enable_jumbo = "true"
 #enable_jumbo = "false"
 # truncate = "100"
 about_logo = "/img/DAC_logo.svg"
-copyright_notice = "Copyright 2020 [Data Analytics Colloquium](https://www.datacolloquium.com)"
+copyright_notice = "Copyright 2020 [Data Analytics Colloquium](https://www.dacolloquium.com)"
 # itunes_subscribe = "https://podcasts.apple.com/us/podcast/arrested-devops/id773888088?ign-mpt=uo%3D4&mt=2"
 # android_subscribe = "http://subscribeonandroid.com/feeds.podtrac.com/VGAulpN7MY1U"
 # spotify_subscribe = "https://open.spotify.com/show/..."
